hphp/test/quick/global_addelem.php.expectf

Fatal error: Cannot use [] with $GLOBALS in %s/global_addelem.php on line 6
